--- a/Code/style2.css
+++ b/Code/style2.css
@@ -5,6 +5,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     transition: top 0.5s;
     scroll-behavior: smooth;
+    zoom: 110%;
 }
 
 
